Fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ input {
 	display: flex;
 	justify-content: center;
 	padding: 0;
-	margin-top: 0;
+	margin-top: 0 0 18px;
 }
 
 .b-icons__item{
@@ -93,7 +93,7 @@ input {
 }
 
 .b-signup-container__header{
-	padding-bottom: 20px;
+	padding-bottom: 22px;
 }
 
 .b-signup-container__header-title {
@@ -137,6 +137,8 @@ input {
 	font-size: 10px;
 	line-height: 15px;
 	color: #444 ;
+  margin: 6px 0 2px;
+  display: block;
 }
 
 .b-form__password-container {
@@ -160,7 +162,7 @@ input {
   background-color: #0077c5;
   border: 1px solid #0077c5;
   border-radius: 4px;
-  padding: 11px 0;
+  padding: 10.5px 0;
   width: 100%;
   justify-content: center;
   align-items: center;
@@ -181,7 +183,7 @@ input {
 }
 
 .b-form__footer{
-	margin-top: 41px;
+	margin-top: 39px;
   text-align: center;
 }
 
